--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.0.1",
+    "ethers": "^5.6.8",
+    "magic-sdk": "^8.1.1",
+    "moment": "^2.29.3",
+    "moralis": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "react-moralis": "^1.4.0",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-spinners": "^0.12.0",
+    "web3uikit": "^0.1.159"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
